# API-Finance-Dashboard

./: .gitignore  CLAUDE.md  LICENSE  README.md  api-finance-dashboard.spec  installer.iss  pyproject.toml
.github/workflows/: release.yml
openspec/changes/dashboard-ui-modernization/: design.md  proposal.md  tasks.md
openspec/changes/desktop-packaging/: design.md  proposal.md  tasks.md
openspec/changes/fix-playwright-no-sandbox-freeze/: design.md  proposal.md  tasks.md
openspec/changes/fix-sub2api-daily-consumption/: design.md  proposal.md  tasks.md
openspec/changes/fix-sub2api-daily-scraping/: design.md  proposal.md  tasks.md
openspec/changes/refactor-config-fix-sub2api-scraping/: design.md  proposal.md  tasks.md
openspec/changes/smart-config-and-scraping/: design.md  proposal.md  tasks.md
openspec/specs/alert-popup-fix/: spec.md
openspec/specs/alert-system/: spec.md
openspec/specs/automation-profile-management/: spec.md
openspec/specs/brand-logo-integration/: spec.md
openspec/specs/capsule-button-style/: spec.md
openspec/specs/chinese-localization/: spec.md
openspec/specs/dashboard-cards/: spec.md
openspec/specs/dashboard-ui/: spec.md
scripts/: build.py  generate_installer_images.py
src/api_finance_dashboard/: __init__.py  main.py  resources.py
tests/: test_automation_login.py  test_automation_profile.py  test_browser_detector.py  test_browser_engine.py  test_calculation_engine.py  test_data_cleaner.py  test_pre_scrape_actions.py  test_presets.py  test_scraping_validation.py  test_site_repository.py
(+91 files in other folders)
