[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-finance-dashboard"
version = "0.2.0"
description = "API站长自动化财务看板 - 基于RPA的本地轻量级监控软件"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "playwright>=1.40.0",
    "plyer>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
api-finance-dashboard = "api_finance_dashboard.main:main"

[tool.setuptools.packages.find]
where = ["src"]
